"ChangeLog"

2005-10-30	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-62-cflat-02-01:
	  This branch for fixing a known bug in cflat.  
		Address test cases connect/122-126.in.  
	  No code revision with this tag.
	  Added bunch of alloc and cflat tests in parser/connect dir.  


2005-10-30	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-62-merged-flow-01-08:
	  Merged -flow-01 branch:
	  Summary: flow control (loops and conditionals) work in
		sequentially unrolled scopes.  


2005-10-30	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-61-flow-01-08:
	  Added a few lines of (disabled) debug code.
	  Discovered cflat bug in cases flow/031, connect/122-126.
		Missing aliases to private subinstances.
		All other compile phases through alloc are correct, however.  
	  Bunch of test cases added.  
	  Closing this branch early to focus on critical cflat bug.  
		TODO: connect prs tests! to check for correct aliases


2005-10-29	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-61-flow-01-07:
	  First batch of tests and fixes involving conditional scopes.  
	  index_collection (inst_stmt pointer collections)
		have been augmented to include predicate flag, 
		indicating whether or not statement was inside some conditional
		scope.  Consequentially, object binary sizes have grown
		by one byte per instantiation_statement pointer.  
		Tests have been updated accordingly.  
	  parser::context now tracks whether or not context is in 
		conditional scope.  
	  scopespace::add_instance() when checking for static index overlap,
		disregard all predicated instantiations for now.  


2005-10-28	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-61-flow-01-06:
	  Added code for conditional instance management bodies (untested).
	  Implemented missing pbool_expr::unroll_resolve_value methods, 
		how was this missing before and unnoticed?