@@ -50,7 +50,7 @@ bug's worth.
 
 Adjudication:
 I, fangism, will be the final judge on the resolution of each bug report.  
-Reward substitution is negotiablem but be forewarned that I drive
+Reward substitution is negotiable, but be forewarned that I drive
 a hard bargain.  
 
 Bonus:
